# naovoce-dashboard

./: .editorconfig  .env.dev  .gitignore  LICENSE.txt  Makefile  Procfile  README.md  cronjob.sh  gunicorn.conf.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
dashboard/: __init__.py  config.py  extensions.py  main.py
dashboard/api/: __init__.py  resources.py
dashboard/auth/: __init__.py  commands.py  models.py  routes.py
dashboard/charts/: __init__.py  data.py  routes.py
dashboard/core/: __init__.py  commands.py  data.py  data_fetchers.py  models.py  newsletter.py  parameters.py  request_params.py  routes.py  s3.py
dashboard/core/importer/: __init__.py  database.py  exports.py  mappings.py
dashboard/core/importer/adapters/: __init__.py  database.py  exports.py
dashboard/core/maintenance/: __init__.py  purge_old_exports.py
dashboard/resources/gis/: cz_1.dbf  cz_1.shp  cz_1.shx  cz_2.dbf  cz_2.shp  cz_2.shx
dashboard/resources/styles/: bulma.sass  dashboard.sass
dashboard/static/: manifest.json
dashboard/templates/: _base.html  base.html  charts.html  hello.html  index.html  login.html  maps.html  zones.html
dashboard/templates/inc/: charts.html  dashboard.html  header.html  index-content.html  login.html  login_form.html  login_modal.html  stats.html
dashboard/templates/stats/: _macros.html  _table-head.html  _table-limit.html  _table-paging.html  base.html  categories.html  comments.html  creators.html  images.html  pois.html
dashboard/templates/tables/: _macros.html  _table-head.html  base.html  categories-csv.txt  categories.html  comments-csv.txt  comments.html  creators-csv.txt  creators.html  images-csv.txt  images.html  pois-csv.txt  pois.html
dashboard/templates/zones/: email_body.txt  email_subject.txt
dashboard/utils/: commands.py  email.py
dashboard/zones/: __init__.py  commands.py  data.py  models.py  routes.py
