[project]
name = "dashboard"
authors = [
    {name = "Ondřej Nejedlý", email = "jsmesami@gmail.com"},
]
dynamic = ["version"]
description = "Statistics Dashboard for Na-ovoce.cz"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.11"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "boto3",
    "flask",
    "flask-htmx",
    "flask-login",
    "flask-restful",
    "flask-sqlalchemy",
    "geoalchemy2",
    "gunicorn",
    "gunicorn[gevent]",
    "jinja2-fragments",
    "python-dotenv",
    "requests",
    "shapely",
    "werkzeug",
]

[project.optional-dependencies]
dev = [
    "aiosmtpd",
    "black",
    "honcho",
    "isort",
    "pip-tools",
    "watchdog",
]

[project.urls]
homepage = "https://github.com/jsmesami/naovoce-dashboard"
repository = "https://github.com/jsmesami/naovoce-dashboard"

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dashboard"]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "dashboard.__version__"}

[tool.setuptools.package-data]
dashboard = ["templates/*.html"]

[tool.black]
target-version = ["py311"]
src_paths = ["dashboard"]

[tool.isort]
profile = "black"
src_paths = ["dashboard"]
